objects/LLC_BI__Legal_Entities__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Maximum_Liability_Limitation_Amount__c</fullName>
        <description>Amount of Maximum Liability Limitation. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Amount of Maximum Liability Limitation. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Maximum Liability Limitation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Percentage_Limitation__c</fullName>
        <description>Percentage Limitation. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Percentage Limitation. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Percentage Limitation</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Principal_Reduction_Limitation_Amount__c</fullName>
        <description>Amount of Principal Reduction Limitation. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Amount of Principal Reduction Limitation. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Principal Reduction Limitation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Time_Limitation_Years__c</fullName>
        <description>Time Limitation in Years. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Time Limitation in Years. Use this field only if Guarantor type is Limited Unsecured Guarantee or Limited Secured Guarantee. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Time Limitation Years</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Entity Involvement</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Deposit__c</field>
            <operation>equals</operation>
        </filters>
        <label>All2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Involvements</pluralLabel>
    <recordTypes>
        <fullName>Deposit_Involvement2</fullName>
        <active>true</active>
        <label>Deposit Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Deposit_Involvement</fullName>
        <active>false</active>
        <label>Deposit Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Loan_Involvement</fullName>
        <active>false</active>
        <label>Loan Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Involvement2</fullName>
        <active>true</active>
        <label>Loan Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treasury_Involvement</fullName>
        <active>true</active>
        <label>Treasury Involvement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Force_Contingent_Type_on_Guarantor</fullName>
        <active>false</active>
        <description>Because &quot;Contingent&quot; and Guarantor or basically the same thing</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( LLC_BI__Borrower_Type__c, &quot;Guarantor&quot;), ISPICKVAL( Contingent_Type__c, &apos;&apos;)),True,False)</errorConditionFormula>
        <errorMessage>You must specify a type of contingency for this Guarantor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Contingent_Amount_Exceeds_Loan_Amount</fullName>
        <active>true</active>
        <description>Ensures the contingent amount does not exceed the loan amount.</description>
        <errorConditionFormula>LLC_BI__Contingent_Amount__c &gt; LLC_BI__Loan__r.LLC_BI__Amount__c</errorConditionFormula>
        <errorDisplayField>LLC_BI__Contingent_Amount__c</errorDisplayField>
        <errorMessage>Contingent amount cannot exceed the loan amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Contingent_Amount_Less_Than_0</fullName>
        <active>true</active>
        <description>Contingent Amount a negative value.</description>
        <errorConditionFormula>LLC_BI__Contingent_Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Contingent Amount must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Contingent_Amount_and_Contingent_Percent</fullName>
        <active>true</active>
        <description>Only one field can be used to calculate contingent guarantee. Please specify either amount or percentage before saving.</description>
        <errorConditionFormula>( LLC_BI__Contingent_Amount__c &gt; 0 &amp;&amp;  LLC_BI__Ownership__c &gt; 0) &amp;&amp;
(!CONTAINS(TEXT(LLC_BI__Borrower_Type__c) , &apos;Household&apos;))</errorConditionFormula>
        <errorMessage>Only one field can be used to calculate contingent guarantee. Please specify either amount or percentage before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__HMDA_Demographic</fullName>
        <active>true</active>
        <description>--DEPRECATED--</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>--DEPRECATED--</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Ownership_Less_Than_0</fullName>
        <active>true</active>
        <description>Contingent Percentage must be greater than 0.</description>
        <errorConditionFormula>LLC_BI__Ownership__c &lt; 0</errorConditionFormula>
        <errorMessage>Contingent Percentage must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>